[package]
name = "kingfisher"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mongrov/kingfisher"
repository = "https://github.com/mongrov/kingfisher"
keywords = ["cli", "mustache", "template"]
description = "fast template engine(s) with any config (json, yaml, toml)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
config = "0.13"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.3.6"

[[bin]]
edition = "2021"
name = "kf"
path = "src/main.rs"
